--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,20 +5,23 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "主页"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "成员"
+    url: /members/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "代表性成果"
+    url: /achievement/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "论文分享"
+    url: /papers/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "实验室活动"
+    url: /activities/
+    
+  - title: "联系我们"
+    url: /contact/   
     
   - title: "CV"
     url: /cv/
